@@ -1,8 +1,6 @@
 package com.diplomski.doctor_appointment_system.service;
 
-import com.diplomski.doctor_appointment_system.dto.AppointmentRequestDTO;
-import com.diplomski.doctor_appointment_system.dto.AppointmentResponseDTO;
-import com.diplomski.doctor_appointment_system.exception.AppointmentNotFoundException;
+import com.diplomski.doctor_appointment_system.dto.*;
 import com.diplomski.doctor_appointment_system.model.*;
 import com.diplomski.doctor_appointment_system.repository.*;
 
@@ -10,134 +8,121 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class AppointmentService {
 
     private final AppointmentRepository repository;
-    private final DoctorRepository doctorRepository;
-    private final PatientRepository patientRepository;
 
     public AppointmentService(AppointmentRepository repository,
                               DoctorRepository doctorRepository,
                               PatientRepository patientRepository) {
         this.repository = repository;
-        this.doctorRepository = doctorRepository;
-        this.patientRepository = patientRepository;
     }
 
-    // =========================
-    // MAPPER
-    // =========================
+    // ================= MAP =================
     private AppointmentResponseDTO map(Appointment a) {
         AppointmentResponseDTO dto = new AppointmentResponseDTO();
         dto.setId(a.getId());
         dto.setDoctorId(a.getDoctorId());
         dto.setPatientId(a.getPatientId());
-        dto.setDate(a.getDate().toString());
-        dto.setTime(a.getTime().toString());
+        dto.setDate(a.getDate());
+        dto.setTime(a.getTime());
         dto.setStatus(a.getStatus().name());
         return dto;
     }
 
-    // =========================
-    // SAFE RESOLVE (NO CRASH)
-    // =========================
-    private String resolveDoctor(String input) {
-        if (input == null) return null;
-
-        return doctorRepository.findById(input)
-                .map(Doctor::getId)
-                .orElseGet(() ->
-                        doctorRepository.searchDoctors(input)
-                                .stream()
-                                .findFirst()
-                                .map(Doctor::getId)
-                                .orElse(null)
-                );
+    // ================= VALIDATION =================
+    private void validateDate(String date) {
+        if (date == null || !date.matches("^\\d{2}\\.\\d{2}\\.\\d{4}\\.$")) {
+            throw new IllegalArgumentException(
+                    "Invalid date format. Required: dd.MM.yyyy. Example: 15.05.2026."
+            );
+        }
     }
 
-    private String resolvePatient(String input) {
-        if (input == null) return null;
-
-        return patientRepository.findById(input)
-                .map(Patient::getId)
-                .orElseGet(() ->
-                        patientRepository.searchPatients(input)
-                                .stream()
-                                .findFirst()
-                                .map(Patient::getId)
-                                .orElse(null)
-                );
+    private void validateTime(String time) {
+        if (time == null || !time.matches("^([01]\\d|2[0-3]):[0-5]\\d$")) {
+            throw new IllegalArgumentException(
+                    "Invalid time format. Required: HH:mm. Example: 17:00"
+            );
+        }
     }
 
-    // =========================
-    // BOOK
-    // =========================
+    // ================= GET ALL =================
+    public List<AppointmentResponseDTO> getAllAppointments() {
+
+        List<AppointmentResponseDTO> list = repository.findAll()
+                .stream()
+                .map(this::map)
+                .toList();
+
+        if (list.isEmpty()) {
+            throw new RuntimeException("No appointments found");
+        }
+
+        return list;
+    }
+
+    // ================= BOOK =================
     public AppointmentResponseDTO bookAppointment(AppointmentRequestDTO dto) {
 
-        String doctorId = resolveDoctor(dto.getDoctorId());
-        String patientId = resolvePatient(dto.getPatientId());
-
-        LocalDate date = LocalDate.parse(dto.getDate());
-        LocalTime time = LocalTime.parse(dto.getTime());
-
-        if (doctorId == null || patientId == null) {
-            throw new IllegalStateException("Doctor or Patient not found");
-        }
-
-        boolean exists = repository.existsByDoctorIdAndDateAndTime(
-                doctorId, date, time
-        );
-
-        if (exists) {
-            throw new IllegalStateException("Time slot already booked");
-        }
+        validateDate(dto.getDate());
+        validateTime(dto.getTime());
 
         Appointment a = new Appointment();
         a.setId(UUID.randomUUID().toString());
-        a.setDoctorId(doctorId);
-        a.setPatientId(patientId);
-        a.setDate(date);
-        a.setTime(time);
+        a.setDoctorId(dto.getDoctorId());
+        a.setPatientId(dto.getPatientId());
+        a.setDate(dto.getDate());
+        a.setTime(dto.getTime());
         a.setStatus(AppointmentStatus.BOOKED);
 
         return map(repository.save(a));
     }
 
-    // =========================
-    // SEARCH (SMART + SAFE)
-    // =========================
-    public List<AppointmentResponseDTO> search(String doctor, String patient, String date) {
+    // ================= SEARCH =================
+    public List<AppointmentResponseDTO> search(String doctor, String patient, String date, String id) {
 
-        String doctorId = resolveDoctor(doctor);
-        String patientId = resolvePatient(patient);
+        if (id != null && !id.isBlank()) {
+            return repository.findById(id)
+                    .stream()
+                    .map(this::map)
+                    .toList();
+        }
 
-        return repository.findAll().stream()
-                .filter(a -> doctorId == null || a.getDoctorId().equals(doctorId))
-                .filter(a -> patientId == null || a.getPatientId().equals(patientId))
-                .filter(a -> date == null || a.getDate().toString().equals(date))
+        if (date != null) validateDate(date);
+
+        List<AppointmentResponseDTO> result = repository.findAll().stream()
+                .filter(a -> doctor == null || a.getDoctorId().equals(doctor))
+                .filter(a -> patient == null || a.getPatientId().equals(patient))
+                .filter(a -> date == null || a.getDate().equals(date))
                 .map(this::map)
-                .collect(Collectors.toList());
+                .toList();
+
+        if (result.isEmpty()) {
+            throw new RuntimeException("No appointments found for given criteria");
+        }
+
+        return result;
     }
 
-    // =========================
-    // STATUS
-    // =========================
+    // ================= CANCEL =================
     public AppointmentResponseDTO cancelAppointment(String id) {
         Appointment a = repository.findById(id)
-                .orElseThrow(() -> new AppointmentNotFoundException("Not found"));
+                .orElseThrow(() -> new RuntimeException("Appointment not found"));
 
         a.setStatus(AppointmentStatus.CANCELLED);
         return map(repository.save(a));
     }
 
+    // ================= COMPLETE =================
     public AppointmentResponseDTO completeAppointment(String id) {
         Appointment a = repository.findById(id)
-                .orElseThrow(() -> new AppointmentNotFoundException("Not found"));
+                .orElseThrow(() -> new RuntimeException("Appointment not found"));
 
         a.setStatus(AppointmentStatus.COMPLETED);
         return map(repository.save(a));
